セクションフォルダに内容を追加

--- a/nlp_bot/Section_7 （分散表現、Word2vec、Doc2vec）/word_similarity.ipynb
+++ b/nlp_bot/Section_7 （分散表現、Word2vec、Doc2vec）/word_similarity.ipynb
@@ -18,9 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['吾輩', 'は', '猫', 'で', 'ある', '。'], ['名前', 'は', 'まだ', '無い', '。'], ['どこ', 'で', '生れ', 'た', 'か', 'とんと', '見当', 'が', 'つか', 'ぬ', '。'], ['何', 'でも', '薄暗い', 'じめじめ', 'し', 'た', '所', 'で', 'ニャーニャー', '泣い', 'て', 'いた事', 'だけ', 'は', '記憶', 'し', 'て', 'いる', '。'], ['吾輩', 'は', 'ここ', 'で', '始め', 'て', '人間', 'という', 'もの', 'を', '見', 'た', '。'], ['しかも', 'あと', 'で', '聞く', 'と', 'それ', 'は', '書生', 'という', '人間', '中', 'で', '一番', '獰悪', 'な', '種族', 'で', 'あっ', 'た', 'そう', 'だ', '。'], ['この', '書生', 'という', 'の', 'は', '時々', '我々', 'を', '捕え', 'て', '煮', 'て', '食う', 'という', '話', 'で', 'ある', '。'], ['しかし', 'その', '当時', 'は', '何', 'という', '考', 'も', 'なかっ', 'た', 'から', '別段', '恐し', 'いとも', '思わ', 'なかっ', 'た', '。'], ['ただ', '彼', 'の', '掌', 'に', '載せ', 'られ', 'て', 'スー', 'と', '持ち上げ', 'られ', 'た', '時', '何だか', 'フワフワ', 'し', 'た', '感じ', 'が', 'あっ', 'た', 'ばかり', 'で', 'ある', '。'], ['掌', 'の', '上', 'で', '少し', '落ちつい', 'て', '書生', 'の', '顔', 'を', '見', 'た', 'の', 'が', 'いわゆる', '人間', 'という', 'もの', 'の', '見', '始', 'で', 'あろ', 'う', '。']]\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "from gensim.models import word2vec\n",
@@ -28,7 +36,7 @@
     "with open('wagahai_words.pickle', mode='rb') as f:\n",
     "    wagahai_words = pickle.load(f)\n",
     "\n",
-    "print(wagahai_words)\n",
+    "print(wagahai_words[:10])\n",
     "\n",
     "# size : 中間層のニューロン数\n",
     "# min_count : この値以下の出現回数の単語を無視\n",
@@ -53,9 +61,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "model.wv.most_similar?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('人間', 0.7466962337493896), ('世間', 0.7327403426170349), ('君子', 0.7270559072494507), ('事実', 0.714855968952179), ('教師', 0.7141245007514954), ('恋', 0.6855183243751526), ('智識', 0.6799717545509338), ('問題', 0.668407142162323), ('必要', 0.6614232063293457), ('芸術', 0.6611473560333252)]\n"
+     ]
+    }
+   ],
    "source": [
     "print(model.wv.most_similar(\"猫\"))  # 最も似ている単語"
    ]
@@ -76,9 +101,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7466963\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -102,6 +135,45 @@
     "## 課題:\n",
     "「名前」という単語と類似度の高い単語を表示してみましょう。  \n",
     "また、最も類似度が高い単語とのコサイン類似度を計算してみましょう。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('妻', 0.7436474561691284), ('泥棒', 0.7363054156303406), ('嫌', 0.7330549359321594), ('罪', 0.7241301536560059), ('あいつ', 0.718488872051239), ('教師', 0.7174296379089355), ('娘', 0.7138931751251221), ('金田', 0.6941447257995605), ('嫌い', 0.6889947652816772), ('近頃', 0.6852846145629883)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model.wv.most_similar('名前'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.74364746"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aa = model.wv.__getitem__('名前')\n",
+    "bb = model.wv.__getitem__('妻')\n",
+    "np.dot(aa, bb) / np.linalg.norm(aa) / np.linalg.norm(bb)"
    ]
   },
   {
